Add skeleton of web app and dev environment script

--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "author": "Wayde Reitsma <waydereitsma@gmail.com> (https://waydereitsma.me/)",
   "license": "MIT",
   "scripts": {
-    "build": "waffle"
+    "build:contracts": "waffle",
+    "build:app": "parcel build src/index.html",
+    "build": "npm run build:contracts & npm run build:app",
+    "start:dev": "npm run build:contracts & node devStart.js",
+    "start": "parcel serve src/index.html"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^2.4.0",
-    "ethereum-waffle": "^2.1.0"
+    "ethereum-waffle": "^2.1.0",
+    "ganache-core": "^2.8.0",
+    "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "ethers": "^4.0.39"
   }
 }
