--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "start": "parcel serve src/index.html"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
     "@openzeppelin/contracts": "^2.4.0",
     "ethereum-waffle": "^2.1.0",
     "ganache-core": "^2.8.0",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "@babel/runtime": "^7.7.2",
     "ethers": "^4.0.39",
-    "hyperapp": "^2.0.3"
+    "virtual-dom": "^2.1.1"
   }
 }
