--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@openzeppelin/contracts": "^2.4.0",
+    "bulma": "^0.8.0",
     "ethereum-waffle": "^2.1.0",
     "ganache-core": "^2.8.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.23.7"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.2",
