--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@openzeppelin/contracts": "^2.4.0",
     "bulma": "^0.8.0",
     "chai": "^4.2.0",
+    "chainlink": "^0.7.9",
     "ethereum-waffle": "^2.1.0",
     "ganache-core": "^2.8.0",
     "mocha": "^6.2.2",
